--- a/src/views/qualification_designer.html
+++ b/src/views/qualification_designer.html
@@ -4,7 +4,7 @@
     <base href="{{base_url}}static/xueyigou/" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
-    <title>center-c-09</title>
+    <title>center-d-09</title>
     <link rel="stylesheet" href="style/swiper-bundle.min.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
@@ -43,11 +43,11 @@
             <!--已登录-->
             <div class="ralbox wralbox">
                 <div class="loginbtn">
-                    <img src="images/u_user_02.jpg">
+                    <img src="images/u_user_01.png">
                     <div class="loginbox iconfont icon-arrt">
                         <div class="login_u">
-                            <img src="images/u_user_02.jpg">
-                            <p>济南大学设计创新研究院<br /><span>企业主，您好！</span></p>
+                            <img src="images/u_user_01.png">
+                            <p>阿拉灯神丁<br /><span>设计师，您好！</span></p>
                         </div>
                         <a class="centerbtn iconfont icon-user" href="#">个人中心</a>
                         <a class="centerbtn iconfont icon-logout" href="#">退出登录</a>
@@ -59,14 +59,14 @@
     <!--header02-->
     <section class="ce-content">
         <div class="ce-left">
-            <img src="images/u_user_02.jpg" class="d-photo">
-            <h3>济南大学设计创新研究院</h3>
+            <img src="images/u_user_01.png" class="d-photo">
+            <h3>女帝汉库克</h3>
             <ul>
                 <li><a href="#">我的主页</a></li>
                 <li><a href="#">我的数据</a></li>
-                <li><a href="#">我的产品</a></li>
+                <li><a href="#">我的作品</a></li>
                 <li><a href="#">我的服务</a></li>
-                <li><a href="#">我的招聘</a></li>
+                <li><a href="#">我的圈子</a></li>
                 <li><a href="#">我的收藏</a></li>
                 <li><a href="#">购买订单</a></li>
                 <li><a href="#">出售订单</a></li>
@@ -81,15 +81,33 @@
             <div class="centerrt centertabs">
                 <h3>资质审核</h3>
             </div>
-            <!--未提交-->
-            <!-- <div class="zztip zztip-01">
-                    <strong>未提交资质！</strong>请上传后提交审核
-                </div> -->
-
+            {{#if status}}
+            <!-- 状态：0默认待审核，-1审核不通过，1审核通过 -->
+            {{#if (eq status 0)}}
+            <!--审核中-->
+            <div class="zztip zztip-01">
+                <strong>资质正在审核中！</strong>请稍后查看审核结果
+            </div>
+            {{/if}}
+            {{#if (eq status -1)}}
+            <!--未通过-->
+            <div class="zztip zztip-02">
+                <strong>资质审核未通过！</strong>请修改后重新提交
+            </div>
+            {{/if}}
+            {{#if (eq status 1)}}
             <!--已通过-->
             <div class="zztip zztip-03">
-                <strong>恭喜你，注册成功！</strong>请提交企业信息进行企业用户资质审核
+                <strong>资质审核已通过！</strong>
             </div>
+            {{/if}}
+            {{else}}
+            <!--未提交-->
+            <div class="zztip zztip-01">
+                <strong>未提交资质！</strong>请上传后提交审核
+            </div>
+            {{/if}}
+
             <!--
                     未提交和未通过状态时，表单处于可编辑状态
                     审核中和已通过状态时，表达则为不可编辑状
@@ -101,21 +119,24 @@
             <form action="{{base_url}}do_approve" method="post" enctype="multipart/form-data" class="centerbd">
                 <ul class="infoblock">
                     <li class="ibline">
-                        <p class="ibline-l">法人姓名</p>
+                        <p class="ibline-l">真实姓名</p>
                         <div class="ibline-r">
-                            <input class="ibline-r comm-input" name="real_name" value="" placeholder="您的真实姓名（必填）">
-                        </div>
-                    </li>
-                    <li class="ibline"> 
-                        <p class="ibline-l">联系电话</p>
-                        <div class="ibline-r">
-                            <input class="ibline-r comm-input" name="mobile" value="" placeholder="您的联系电话（必填）">
+                            <input class="ibline-r comm-input" name="real_name" value="{{real_name}}"
+                                placeholder="您的真实姓名（必填）">
                         </div>
                     </li>
                     <li class="ibline">
-                        <p class="ibline-l">法人身份证号</p>
+                        <p class="ibline-l">联系电话</p>
                         <div class="ibline-r">
-                            <input class="ibline-r comm-input" name="identity_card" value="" placeholder="您的身份证号（必填）">
+                            <input class="ibline-r comm-input" name="mobile" value="{{mobile}}"
+                                placeholder="您的联系电话（必填）">
+                        </div>
+                    </li>
+                    <li class="ibline">
+                        <p class="ibline-l">身份证号</p>
+                        <div class="ibline-r">
+                            <input class="ibline-r comm-input" name="identity_card" value="{{identity_card}}"
+                                placeholder="您的身份证号（必填）">
                         </div>
                     </li>
                     <li class="ibline">
@@ -132,33 +153,42 @@
                         </div>
                     </li>
                     <li class="ibline">
-                        <p class="ibline-l">社会信用代码</p>
-                        <div class="ibline-r">
-                            <input class="ibline-r comm-input" name="credit_code" value="" placeholder="营业执照统一社会信用代码（必填）">
-                        </div>
-                    </li>
-                    <li class="ibline">
-                        <p class="ibline-l">营业执照照片</p>
-                        <div class="ibline-r-670 comm-input filestyle">
-                            <p>营业执照照片，不可大于1M（必填）</p>
-                            <i class="iconfont icon-selfile">浏览</i>
-                            <input type="file" name="business_license">
-                        </div>
-                    </li>
-                    <li class="ibline">
                         <p class="ibline-l">支付宝</p>
                         <div class="ibline-r">
-                            <input class="ibline-r comm-input" name="alipay" value="" placeholder="您的支付宝账号，用于提现结算（必填）">
+                            <input class="ibline-r comm-input" name="alipay" value="{{alipay}}"
+                                placeholder="您的支付宝账号，用于提现结算（必填）">
                         </div>
                     </li>
                     <li class="ibline">
-                        <div class="ibline-r"> 
+                        <p class="ibline-l">学生身份认证</p>
+                        <div class="ibline-r">
+                            <label class="cur-po">
+                                <input type="radio" {{#if is_student}} checked="checked" {{/if}} name="state"
+                                    value="true">我是在校学生
+                            </label>
+                            <label class="cur-po">
+                                <input type="radio" {{#unless is_student}} checked="checked" {{/unless}} name="state"
+                                    value="false">我不是在校学生
+                            </label>
+                        </div>
+                    </li>
+                    <li class="ibline xszline" style="{{#unless is_student}}display:none;{{/unless}}">
+                        <p class="ibline-l">学生证照片</p>
+                        <div class="ibline-r-670 comm-input filestyle">
+                            <p>学生证照片，不可大于1M（必填）</p>
+                            <i class="iconfont icon-selfile">浏览</i>
+                            <input name="student_certificate" type="file">
+                        </div>
+                    </li>
+                    <li class="ibline">
+                        <div class="ibline-r">
                             <input type="hidden" name="user_id" value="{{user_id}}" class="reg-type" required>
                             <input type="hidden" name="user_type" value="{{user_type}}" class="reg-type" required>
 
-
                             <button type="submit" class="commonbtn">保存</button>
+                            <!-- <button type="submit" class="commonbtn cursornot" disabled>保存</button> -->
                         </div>
+
                     </li>
                 </ul>
             </form>
