个人中心修改密码功能

--- a/src/views/frame_base.html
+++ b/src/views/frame_base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/swiper-bundle.min.css">
     <link rel="stylesheet" href="style/style.css">
 </head>
-
+ 
 <body>
     <nav class="mainnav mainnav02">
         <div class="brand"><a href="#"><img src="images/logo-c.png"></a></div>
@@ -47,10 +47,10 @@
                     <div class="loginbox iconfont icon-arrt">
                         <div class="login_u">
                             <img src="images/u_user_01.png">
-                            <p>阿拉灯神丁<br /><span>设计师，您好！</span></p>
+                            <p>{{username}}<br /><span>设计师，您好！</span></p>
                         </div>
                         <a class="centerbtn iconfont icon-user" href="#">个人中心</a>
-                        <a class="centerbtn iconfont icon-logout" href="#">退出登录</a>
+                        <a class="centerbtn iconfont icon-logout" href="{{base_url}}logout">退出登录</a>
                     </div>
                 </div>
             </div>
