--- a/src/views/qualification_designer.html
+++ b/src/views/qualification_designer.html
@@ -4,21 +4,21 @@
 <section class="ce-content">
     <div class="ce-left">
         <img src="images/u_user_01.png" class="d-photo">
-        <h3>女帝汉库克</h3>
+        <h3>{{username}}</h3>
         <ul>
-            <li><a href="#">我的主页</a></li>
-            <li><a href="#">我的数据</a></li>
-            <li><a href="#">我的作品</a></li>
-            <li><a href="#">我的服务</a></li>
-            <li><a href="#">我的圈子</a></li>
-            <li><a href="#">我的收藏</a></li>
-            <li><a href="#">购买订单</a></li>
-            <li><a href="#">出售订单</a></li>
-            <li><a href="#">我的财务</a></li>
-            <li><a href="#">地址管理</a></li>
-            <li><a href="#">个人资料</a></li>
-            <li class="on"><a href="#">资质审核</a></li>
-            <li><a href="#">账号安全</a></li>
+            <li><a href="javascript:;">我的主页</a></li>
+            <li><a href="javascript:;">我的数据</a></li>
+            <li><a href="javascript:;">我的作品</a></li>
+            <li><a href="javascript:;">我的服务</a></li>
+            <li><a href="javascript:;">我的圈子</a></li>
+            <li><a href="javascript:;">我的收藏</a></li>
+            <li><a href="javascript:;">购买订单</a></li>
+            <li><a href="javascript:;">出售订单</a></li>
+            <li><a href="javascript:;">我的财务</a></li>
+            <li><a href="javascript:;">地址管理</a></li>
+            <li><a href="javascript:;">个人资料</a></li>
+            <li class="on"><a href="javascript:;">资质审核</a></li>
+            <li><a href="javascript:;">账号安全</a></li>
         </ul>
     </div>
     <div class="ce-right">
